# AED_Dados_Seguranca_Publica

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  app.py  pyproject.toml  requirements.txt  test.ipynb
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.yml
.github/workflows/: codeql.yml  dependency-review.yml  dependency_review.yml  extract.yml  first.yml  second.yml
.streamlit/: config.toml
SQL/: view.sql
SQL/Respostas SQL/: 000.sql  2.sql
SQL/Respostas SQL/R01/: 1.sql  Quantidade_de_Municipios.csv  Quantidade_de_Municípios.csv
SQL/Respostas SQL/R02/: 2.sql  Nome_Municipios.csv
SQL/Respostas SQL/R03/: 3.sql  Nome_Regioes.csv
SQL/Respostas SQL/R04/: 4.sql  Rank,Ano,Qtd_Homicidio_Doloso,(%)Percent.csv
SRC/extract/: extract.py  extract_and_save_data.py  extract_name_columns.py  extract_name_coordinates.py
SRC/transformation/: transformation.py
data/: SILVER_data.parquet  rawDados.db
data/dict_data/: dictDados.csv  municipio.csv  regiao.csv  tipo_ocorrencia.csv
data/map/: geojs-33-mun.json  name_coordinates.csv
data/raw_dados/: rawDados.csv
data/raw_data/GOLDEN/: GOLDEN_data.parquet
data/raw_data/SILVER/: SILVER_data.parquet
notebooks/: coleta_dados.ipynb  rawDados.db
test/: pytest.ini.py  test_function.py
