[project]
name = "aed-dados-seguranca-publica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
    "detect-secrets>=1.5.0",
    "duckdb>=1.4.3",
    "streamlit>=1.53.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
